[gd_scene load_steps=5 format=2]

[ext_resource path="res://utils/pixelfont.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scenes/Environment/NumberOfKills.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Environment/Skull.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Environment/DeathGUI.gd" type="Script" id=4]

[node name="DeathGUI" type="CanvasLayer" groups=[
"DeathGUI",
]]
script = ExtResource( 4 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CenterContainer"]
margin_left = 207.0
margin_top = 181.0
margin_right = 816.0
margin_bottom = 419.0
custom_constants/separation = 20

[node name="GameOverText" type="Label" parent="Control/CenterContainer/VBoxContainer"]
margin_right = 609.0
margin_bottom = 59.0
custom_fonts/font = ExtResource( 1 )
text = "YOU DIED"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Control/CenterContainer/VBoxContainer"]
margin_top = 79.0
margin_right = 609.0
margin_bottom = 159.0
alignment = 1

[node name="Skull" parent="Control/CenterContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 247.0
margin_right = 327.0
margin_bottom = 80.0

[node name="Colon" type="Label" parent="Control/CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 331.0
margin_top = 10.0
margin_right = 358.0
margin_bottom = 69.0
custom_fonts/font = ExtResource( 1 )
text = ":"

[node name="NumberOfKills" parent="Control/CenterContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 2 )]
margin_left = 362.0
margin_top = 10.0
margin_right = 362.0
margin_bottom = 69.0

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/CenterContainer/VBoxContainer"]
margin_top = 179.0
margin_right = 609.0
margin_bottom = 238.0
custom_constants/separation = 200
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Retry" type="Label" parent="Control/CenterContainer/VBoxContainer/HBoxContainer2"]
margin_right = 241.0
margin_bottom = 59.0
mouse_filter = 1
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 1 )
text = "Retry"
align = 1

[node name="Exit" type="Label" parent="Control/CenterContainer/VBoxContainer/HBoxContainer2"]
margin_left = 441.0
margin_right = 609.0
margin_bottom = 59.0
mouse_filter = 1
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 1 )
text = "Exit"
align = 1
[connection signal="gui_input" from="Control/CenterContainer/VBoxContainer/HBoxContainer2/Retry" to="." method="_on_Retry_gui_input"]
[connection signal="mouse_entered" from="Control/CenterContainer/VBoxContainer/HBoxContainer2/Retry" to="." method="_on_Retry_mouse_entered"]
[connection signal="mouse_exited" from="Control/CenterContainer/VBoxContainer/HBoxContainer2/Retry" to="." method="_on_Retry_mouse_exited"]
[connection signal="gui_input" from="Control/CenterContainer/VBoxContainer/HBoxContainer2/Exit" to="." method="_on_Exit_gui_input"]
[connection signal="mouse_entered" from="Control/CenterContainer/VBoxContainer/HBoxContainer2/Exit" to="." method="_on_Exit_mouse_entered"]
[connection signal="mouse_exited" from="Control/CenterContainer/VBoxContainer/HBoxContainer2/Exit" to="." method="_on_Exit_mouse_exited"]
